--- a/chrome/options.html
+++ b/chrome/options.html
@@ -28,6 +28,19 @@
 			<br/>
 			
 			<h2 style="font-size: 1.2em; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;">
+				Show Unread Page Count:
+			</h2>
+			<div id="radShowCount">
+				<input type="radio" id="radShowCountOn" name="radShowCount" value="on" />
+				<label for="radShowCountOn">Yes</label>
+				
+				<input type="radio" id="radShowCountOff" name="radShowCount" value="off" />
+				<label for="radShowCountOff">No</label>
+			</div>
+			
+			<br/>
+			
+			<h2 style="font-size: 1.2em; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;">
 				Check for Updates...
 			</h2>
 			<div id="sldFrequency"></div>
