Encapsulating user settings and persistent memory to more easily port to other platforms down the road, and/or utilize other technologies under-the-hood (e.g. chrome.storage.local, chrome.storage.sync)

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -5,6 +5,7 @@
 		<script type="text/javascript" src="lib/jquery-ui-1.10.2.custom.min.js"></script>
 		<link type="text/css" rel="stylesheet" href="lib/jquery-ui-1.10.2.custom.min.css" />
 		
+		<script type="text/javascript" src="settings.js"></script>
 		<script type="text/javascript" src="options.js"></script>
 	</head>
 	
@@ -43,8 +44,10 @@
 			<h2 style="font-size: 1.2em; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;">
 				Check for Updates...
 			</h2>
-			<div id="sldFrequency"></div>
-			<span id="lblFrequency" style="font-size: 0.9em; font-weight: bold; display: inline-block; width: 100%; text-align: center; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;"></span>
+			<div>
+				<div id="sldFrequency"></div>
+				<span id="lblFrequency" style="font-size: 0.9em; font-weight: bold; display: inline-block; width: 100%; text-align: center; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;"></span>
+			</div>
 			
 			<div style="display: inline-block; width: 100%; text-align: center; margin-top: 40px;">
 				<button id="btnSave">Save</button>
