Adding an option to customize the toast icon that appears upon notification of an update.

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -49,6 +49,16 @@
 				<span id="lblFrequency" style="font-size: 0.9em; font-weight: bold; display: inline-block; width: 100%; text-align: center; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;"></span>
 			</div>
 			
+			<br/>
+			
+			<h2 style="font-size: 1.2em; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;">
+				Change the Notification Icon:
+			</h2>
+			<div>
+				<input type="file" id="fileToastIcon" style="vertical-align: middle;" />
+				<img id="imgToastIcon" style="vertical-align: middle;" />
+			</div>
+			
 			<div style="display: inline-block; width: 100%; text-align: center; margin-top: 40px;">
 				<button id="btnSave">Save</button>
 			</div>
