Adding an option to select & customize a notification sound to play upon new updates.

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -52,11 +52,19 @@
 			<br/>
 			
 			<h2 style="font-size: 1.2em; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;">
-				Change the Notification Icon:
+				Notification Icon:
 			</h2>
 			<div>
 				<input type="file" id="fileToastIcon" style="vertical-align: middle;" />
 				<img id="imgToastIcon" style="vertical-align: middle;" />
+			</div>
+			
+			<h2 style="font-size: 1.2em; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;">
+				Notification Sound:
+			</h2>
+			<div>
+				<input type="file" id="fileToastSound" style="vertical-align: middle;" />
+				<audio id="audToastSound" style="vertical-align: middle;" controls="true" />
 			</div>
 			
 			<div style="display: inline-block; width: 100%; text-align: center; margin-top: 40px;">
