Adding a reset button to options page.

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -69,6 +69,8 @@
 			
 			<div style="display: inline-block; width: 100%; text-align: center; margin-top: 40px;">
 				<button id="btnSave">Save</button>
+				<span style="width: 100px;">&nbsp;</span>
+				<button id="btnReset">Reset to Defaults</button>
 			</div>
 		</div>
 	</body>
