Adding version number to bottom of options page

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -10,7 +10,7 @@
 	</head>
 	
 	<body>
-		<div class="section ui-corner-all ui-widget-content" style="padding: 1em 2.2em; width: 35em; margin: 50px auto;">
+		<div class="section ui-corner-all ui-widget-content" style="padding: 1em 2.2em; width: 35em; margin: 50px auto 20px;">
 			<h1 style="margin-top: 0; margin-bottom: 1em; text-align: center; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;">
 				Settings
 			</h1>
@@ -81,6 +81,11 @@
 				<span style="width: 100px;">&nbsp;</span>
 				<button id="btnReset">Reset to Defaults</button>
 			</div>
+		</div>
+		
+		<div style="width: 35em; margin: 0px auto; text-align: center; font-size: 12px; font-style: italic; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;">
+			MSPA Update Notifier <br/>
+			Version <span id="lblVersion"></span>
 		</div>
 	</body>
 </html>
