Storing latest installed version number in all cases where it should be recorded... had previously missed a few.  Adding a settings-level debug flag as well as debug logs all over the place, to make debugging easier from a prod version of the extension.

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -76,6 +76,8 @@
 				</div>
 			</div>
 			
+			<input type="hidden" id="hdnDebugMode" />
+			
 			<div style="display: inline-block; width: 100%; text-align: center; margin-top: 40px;">
 				<button id="btnSave">Save</button>
 				<span style="width: 100px;">&nbsp;</span>
