Adding a 'force check now' button to the options page.  Very nice for debugging and I'm sure users will appreciate it too, from time to time.

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -19,9 +19,10 @@
 				<h2 style="font-size: 1.2em; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;">
 					Check for Updates...
 				</h2>
-				<div>
+				<div style="text-align: center;">
 					<div id="sldFrequency"></div>
-					<span id="lblFrequency" style="font-size: 0.9em; font-weight: bold; display: inline-block; width: 100%; text-align: center; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;"></span>
+					<span id="lblFrequency" style="font-size: 0.9em; font-weight: bold; display: inline-block; width: 100%; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;"></span>
+					<button id="btnForceCheck" class="small" style="margin-top: 10px;">Check Now</button>
 				</div>
 			</div>
 			
