--- a/chrome/options.html
+++ b/chrome/options.html
@@ -46,12 +46,15 @@
 					Show Unread Page Count:
 				</h2>
 				<div id="radShowCount">
-					<input type="radio" id="radShowCountOn" name="radShowCount" value="on" />
+					<input type="radio" id="radShowCountOn" name="radShowCount" value="on" disabled />
 					<label for="radShowCountOn">Yes</label>
 					
-					<input type="radio" id="radShowCountOff" name="radShowCount" value="off" />
+					<input type="radio" id="radShowCountOff" name="radShowCount" value="off" disabled />
 					<label for="radShowCountOff">No</label>
 				</div>
+				<span style="font-size: 10px; margin-top: 5px; display: inline-block;">
+					This feature is disabled until future notice.
+				</span>
 			</div>
 			
 			<br/>
