--- a/chrome/options.html
+++ b/chrome/options.html
@@ -53,7 +53,7 @@
 					<label for="radShowCountOff">No</label>
 				</div>
 				<span style="font-size: 10px; margin-top: 5px; display: inline-block;">
-					This feature is disabled until future notice.
+					This feature is temporarily disabled.
 				</span>
 			</div>
 			
