Migrate all functionality over to use the new DB structure.

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -33,15 +33,12 @@
 					Show Unread Page Count:
 				</h2>
 				<div id="radShowCount">
-					<input type="radio" id="radShowCountOn" name="radShowCount" value="on" disabled />
+					<input type="radio" id="radShowCountOn" name="radShowCount" value="on" />
 					<label for="radShowCountOn">Yes</label>
 
-					<input type="radio" id="radShowCountOff" name="radShowCount" value="off" disabled />
+					<input type="radio" id="radShowCountOff" name="radShowCount" value="off" />
 					<label for="radShowCountOff">No</label>
 				</div>
-				<span style="font-size: 10px; margin-top: 5px; display: inline-block;">
-					This feature is temporarily disabled.
-				</span>
 			</div>
 
 			<br/>
