Clean up some of the branding from MSPA to Homestuck.

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="section ui-corner-all ui-widget-content" style="padding: 1em 2.2em; width: 35em; margin: 50px auto 20px;">
 			<h1 style="margin-top: 0; margin-bottom: 1em; text-align: center; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;">
-				Settings
+				Options
 			</h1>
 
 			<div id="grpToast" style="display: inline-block; text-align: center;">
@@ -72,7 +72,7 @@
 		</div>
 
 		<div style="width: 35em; margin: 0px auto; text-align: center; font-size: 12px; font-style: italic; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;">
-			MSPA Update Notifier <br/>
+			Homestuck Notifier <br/>
 			Version <span id="lblVersion"></span>
 		</div>
 	</body>
