Remove pointless /chrome directory.

--- a/options.html
+++ b/options.html
@@ -30,7 +30,7 @@
 
 			<div id="grpShowCount" style="display: inline-block; text-align: center; float: right;">
 				<h2 style="font-size: 1.2em; font-family: 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;">
-					Show Unread Page Count:
+					Show Page Count:
 				</h2>
 				<div id="radShowCount">
 					<input type="radio" id="radShowCountOn" name="radShowCount" value="on" />
