Add a `reading_club` option.

--- a/options.html
+++ b/options.html
@@ -64,6 +64,19 @@
 				</div>
 			</div>
 
+			<div>
+				<h2>
+					Experimental
+				</h2>
+				<div>
+					<label for="txtReadingClub">Reading Club:</label>
+					<input type="text" id="txtReadingClub" name="txtReadingClub" />
+					<span style="font-size: 10px; margin-top: 5px; display: inline-block;">
+						* If you don't know what this does, please don't touch it.
+					</span>
+				</div>
+			</div>
+
 			<div style="display: inline-block; width: 100%; text-align: center; margin-top: 40px;">
 				<button id="btnSave">Save</button>
 				<span style="width: 100px;">&nbsp;</span>
