Update jquery-ui & hide the reading club field in a collapsed Experimental section.

--- a/options.html
+++ b/options.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<script type="text/javascript" src="lib/jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="lib/jquery-ui-1.10.2.custom.min.js"></script>
-		<link type="text/css" rel="stylesheet" href="lib/jquery-ui-1.10.2.custom.min.css" />
+		<script type="text/javascript" src="lib/jquery-ui-1.12.1.custom.min.js"></script>
+		<link type="text/css" rel="stylesheet" href="lib/jquery-ui-1.12.1.custom.min.css" />
 
 		<script type="text/javascript" src="settings.js"></script>
 		<script type="text/javascript" src="options.js"></script>
@@ -64,7 +64,7 @@
 				</div>
 			</div>
 
-			<div>
+			<div id="grpAccordion">
 				<h2>
 					Experimental
 				</h2>
